* Add missing import in client.py (thanks dato)

0.36 (2007-10-27):
==================

* Client interface has totally changed (see README.plugins). All problems
  regarding spool path etc. not being honored should be fixed.

* Write pidfile even if --no-daemon, so we don't crash. Unnecessary, but
  easier for now.

* Read sleep time correctly in config.

* Fix sox error in peel -c.

* Fix peelrc [options] section parsing.

* Add --encoder option in peel.

0.35 (2007-03-29):
==================

* Fix crash when a buggy MPD reports the length of a track as zero.

0.34 (2007-03-26):
==================

* Sort submissions by time if several spool files are read in one go, to
  avoid erroneously triggering the spam filter (thanks to Steve Hill and
  a cast of thousands).

* Suppress extra warnings if lastmp cannot connect to MPD.

* Fixed creation of Unicode filenames, songs with slashes, and -d option
  parsing in peel. Also, actually install it.

0.33 (2006-07-31):
==================

* Improved some documentation.

* If there is no account information set, print a warning and exit
  normally, instead of panicking. (Reported by Joey Hess.)

0.32 (2006-07-08):
==================

* Added peel, a simple CD ripper for use with mbget which pipes audio
  data to another command (e.g. bfp) and submits played tracks while
  encoding in the background.

* Added a --print-discid option to mbget so that CDs that have been
  extracted somewhere without network access can be tagged and encoded
  by peel later.

* Re-added some lost data validation in lastfmsubmitd.

* Fix lastmp's handling of bad passwords (MPD will let us connect, but
  not actually return any useful information since we don't have read
  permission).

* Make enabling debug from the config file actually work.

0.31 (2006-06-23):
==================

* Replace the environment/option nonsense with a config file.

* Make logs group-writable again.

* Fix a timeout crash in lastfmsubmitd.

0.30 (2006-05-31):